# Merilo

./: docker-compose.yml
backend/: pom.xml
backend/app/models/: order.py  user.py
backend/src/main/kotlin/com/merilo/: MeriloApplication.kt
backend/src/main/kotlin/com/merilo/api/: AuthController.kt  UserController.kt
backend/src/main/kotlin/com/merilo/common/exception/: ApiExceptionHandler.kt
backend/src/main/kotlin/com/merilo/config/: JwtAuthFilter.kt  JwtService.kt  SecurityConfig.kt
backend/src/main/kotlin/com/merilo/dto/: AuthRequest.kt  AuthResponse.kt  UpdatePaymentMethodsRequest.kt  UserResponse.kt
backend/src/main/kotlin/com/merilo/integration/telegram/: TelegramInitDataVerifier.kt  TelegramUser.kt
backend/src/main/kotlin/com/merilo/model/: UserEntity.kt
backend/src/main/kotlin/com/merilo/repository/: UserRepository.kt
backend/src/main/kotlin/com/merilo/service/: AuthService.kt  UserService.kt
bot/: pyproject.toml
bot/app/client/: api.py  base.py  mock.py
bot/app/handlers/: notifications.py  order.py
bot/app/utils/: initdata.py
bot/tests/: index.md  test_initdata.py  test_mock_client.py  test_storage.py
docs/: trip_mode.md
